--- a/client/package.json
+++ b/client/package.json
@@ -46,5 +46,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "https://buzzspacebackend.onrender.com"
 }
