fixed bugs and added new features and readme

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Gootalk",
-  "name": "Gootalk",
+  "short_name": "Buzzspace",
+  "name": "Buzzspace",
   "icons": [
     {
       "src": "favicon.ico",
